--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
     <script type="text/javascript" src="game.js"></script>
     <title>Game</title>
 </head>
+<body>
+	<h1>hello</h1>
+</body>
 </html>
