--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
 	<script type="text/javascript" src="phaser.min.js"></script>
     <script type="text/javascript" src="game.js"></script>
-    <title>Game</title>
+    <title>Phaser</title>
 </head>
+<body>
+	<h1>hello</h1>
+</body>
 </html>
