--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<script type="text/javascript" src="phaser.min.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <title>Phaser</title>
+     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<h1>hello</h1>
+	<h1>Umbrella Game</h1>
 </body>
 </html>
